--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <a href="https://github.com/abshathcodes" target="_blank" class="text-secondary mx-2">
                             <i class="fab fa-github fa-2x"></i>
                         </a>
-                        <a href="www.linkedin.com/in/abshath-hinas-783893388" target="_blank" class="text-secondary mx-2">
+                        <a href="www.linkedin.com/in/abshathcodesign" target="_blank" class="text-secondary mx-2">
                             <i class="fab fa-linkedin fa-2x"></i>
                          </a>
                     </div>
