--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
                     </ul>
                     
                      <div class="text-center mt-4">
-                        <a href="the.abshath@gmail.com" target="_blank" class="text-secondary mx-2">
+                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="text-secondary mx-2">
                            <i class="fas fa-envelope fa-2x"></i>
                         </a>
                         <a href="https://github.com/abshathcodes" target="_blank" class="text-secondary mx-2">
                             <i class="fab fa-github fa-2x"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/abshathcodesign" target="_blank" class="text-secondary mx-2">
+                        <a href="https://www.linkedin.com/in/abshathcodesign/" target="_blank" class="text-secondary mx-2">
                             <i class="fab fa-linkedin fa-2x"></i>
                          </a>
                     </div>
