--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      <h1>Hi, I’m <span class="name">Abshath Hinas</span></h1>
                       <h2>
                          <span class="animated-text">
-                         UI/UX Designer<span class="separator"> and </span>Full-Stack Developer
+                         UI/UX Designer<span class="separator"> and </span>FrontEnd Developer
                           </span>
                      </h2>
                      <p> 
