Add project cards for new UI/UX prototypes
Added new project cards for McLaren Car, Bottle Landing Page, Burger UI, and Calculator Website.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
                                   <p>Designed the user interface and experience of WhatsApp as a front-end prototype using Figma. </p>
                                  <a href="https://www.figma.com/proto/EoEgoHs5MfiqUEsVpvpMls/whatsApp?node-id=1-2&p=f&t=SYJztZ0q0xiCtijQ-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2&show-proto-sidebar=1" target="_blank" class="btn">View Project</a>
                              </div>
+                             <div class="project-card">
+                                <h3>McLaren Car</h3>
+                                <p>Designed the user interface and user experience of the McLaren Car app as a UI/UX prototype using Figma.</p>
+                                <a href="https://www.figma.com/proto/TEFOFQiWNNwYB9kqf0a8mg/Mclaren-car?node-id=7-70&starting-point-node-id=7:70&scaling=scale-down-width&content-scaling=fixed" target="_blank" class="btn">View Project</a>
+                             </div>
+                             <div class="project-card">
+                                <h3>Bottle Landing Page</h3>
+                                <p>Designed the UI/UX prototype for a bottle landing page, experimenting with parallax scrolling effects using Figma.</p>
+                                <a href="https://www.figma.com/proto/N8g4SQRsBTYfI8AGsYVlne/Untitled?node-id=1-4&p=f&t=S4Y3lwX24KTRhvqc-0&scaling=contain&content-scaling=fixed&page-id=0:1" target="_blank" class="btn">View Project</a>
+                             </div>
+                               <div class="project-card">
+                                  <h3>Burger UI</h3>
+                                  <p>Created a UI/UX design prototype for a burger-themed website/app using Figma.</p>
+                                  <a href="https://www.figma.com/proto/zfM1lLLdDC2yYu1wYTYi2T/Burger?t=S4Y3lwX24KTRhvqc-0&scaling=scale-down-width&content-scaling=fixed&page-id=0:1&node-id=1-41&starting-point-node-id=1:41" target="_blank" class="btn">View Project</a>
+                              </div>
+                              <div class="project-card">
+                                <h3>Calculator WebSite</h3>
+                                <p>A functional calculator built using HTML, CSS & JavaScript — showcasing my front‑end coding skills.</p>
+                                <a href="https://abshathcodes.github.io/Calculator/" target="_blank" class="btn">Live Demo</a>
+                              </div>
+                         
                       </div>
              </section>
 
