Fix typos and update project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -102,14 +102,20 @@
                              </div>
                                <div class="project-card">
                                   <h3>Burger UI</h3>
-                                  <p>Created a UI/UX design prototype for a burger-themed website/app using Figma.</p>
+                                  <p>Created a UI/UX design prototype for a burger themed website/app using Figma.</p>
                                   <a href="https://www.figma.com/proto/zfM1lLLdDC2yYu1wYTYi2T/Burger?t=S4Y3lwX24KTRhvqc-0&scaling=scale-down-width&content-scaling=fixed&page-id=0:1&node-id=1-41&starting-point-node-id=1:41" target="_blank" class="btn">View Project</a>
                               </div>
                               <div class="project-card">
                                 <h3>Calculator WebSite</h3>
-                                <p>A functional calculator built using HTML, CSS & JavaScript — showcasing my front‑end coding skills.</p>
-                                <a href="https://abshathcodes.github.io/Calculator/" target="_blank" class="btn">Live Demo</a>
+                                <p>A functional calculator built using HTML, CSS & JavaScript.showcasing my front‑end coding skills.</p>
+                                <a href="https://abshathcodes.github.io/Calculator/" target="_blank" class="btn">View Project</a>
                               </div>
+                              <div class="project-card">
+                                 <h3>Search Weather App</h3>
+                                 <p>A weather search application built with HTML, CSS & JavaScript . featuring real-time weather data and a smooth, responsive UI.</p>
+                                  <a href="https://abshathcodes.github.io/search-weather/" target="_blank" class="btn">View Project</a>
+                              </div>
+
                          
                       </div>
              </section>
