--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                                   <a href="https://www.figma.com/proto/zfM1lLLdDC2yYu1wYTYi2T/Burger?t=S4Y3lwX24KTRhvqc-0&scaling=scale-down-width&content-scaling=fixed&page-id=0:1&node-id=1-41&starting-point-node-id=1:41" target="_blank" class="btn">View Project</a>
                               </div>
                               <div class="project-card">
+                               <h3>Valorant UI Design</h3>
+                               <p>Designed a Valorant themed website UI/UX prototype featuring Chamber, Viper, Neon, and Phoenix using Figma.</p>
+                              <a href="https://www.figma.com/proto/asge4g5CJKaiAcCiao17LG/Valorant-Website-UI-Design-System?node-id=2-2&p=f&t=SQ5on9KuoVBOCqgL-0&scaling=contain&content-scaling=fixed&page-id=0:1&starting-point-node-id=2:2" 
+                                  target="_blank"  class="btn">
+                                       View Project  </a>
+                              </div>
+
+                              <div class="project-card">
                                 <h3>Calculator WebSite</h3>
                                 <p>A functional calculator built using HTML, CSS & JavaScript.showcasing my front‑end coding skills.</p>
                                 <a href="https://abshathcodes.github.io/Calculator/" target="_blank" class="btn">View Project</a>
